    - patches/any/cvs-redirect-throw.diff
    - patches/any/cvs-flush-cache-textrels.diff
    - patches/hurd-i386/cvs-linkat.diff
    - patches/hurd-i386/cvs-select.diff
    - patches/sparc/submitted-epoll.diff
    - patches/any/cvs-dont-expand-dst-twice.diff
    - patches/amd64/cvs-avx-tcb-alignment.diff
    - patches/any/submitted-etc-resolv.conf.diff
    - patches/any/cvs-audit-suid.diff
  * kfreebsd/local-sysdeps.diff, update to r3691 (from squeeze glibc-bsd).
    - fixes LD_PRELOAD with a kfreebsd-9 kernel. Closes: #630695.
    - uses upstream RFTSIGZMB for exit signal selection when available.
    - fixes a crash in if_nameindex() with more than 3 interfaces.
  * Fix preinst script wrt 3.0 kernel. Patch by Colin Watson.  Closes: 
    #630077.
  * Update submitted-resolv.conf-thread.diff from upstream to fix a 
    deadlock in some rare cases.
  * Add patches/any/cvs-resolv-different-nameserver.diff and
    patches/any/submitted-resolv-assert.diff to try a different
    nameserver if the first one returns REFUSED.  Closes: #535504.
  * Add patches/any/cvs-getaddrinfo-single-lookup.diff to fix fallback to
    single lookup dns requests.  Closes: #541167.
  * Add patches/any/cvs-pthread-setgroups.diff to fix setgroups() with
    multiple threads.
  * Add debian/patches/cvs-dl_close-scope-handling.diff from upstream to
    fix issues with dl_close() when resolving locally-defined symbols.
    Closes: #625250.
  * patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 11 Jun 2011 18:12:35 +0200

eglibc (2.11.2-10) unstable; urgency=low

  * Add patches/amd64/cvs-avx-tcb-alignment.diff from upstream to fix 
    alignement issues on CPU supporting the AVX instruction set. Closes:
    #610657.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 23 Jan 2011 19:54:44 +0100

eglibc (2.11.2-9) unstable; urgency=low

  * Disable build failure in case of testsuite regressions, will be 