@@ -8903,7 +8903,7 @@
 +#endif
 --- /dev/null
 +++ b/ports/sysdeps/unix/bsd/bsd4.4/kfreebsd/faccessat.c
-@@ -0,0 +1,172 @@
+@@ -0,0 +1,199 @@
 +/* Test for access to file, relative to open directory.  Linux version.
 +   Copyright (C) 2006 Free Software Foundation, Inc.
 +   This file is part of the GNU C Library.
@@ -8938,6 +8938,16 @@
 +extern int __syscall_faccessat (int fd, const char *path, int mode, int flag);
 +libc_hidden_proto (__syscall_faccessat)
 +
++/*
++   The FreeBSD kernel do not test file access correctly when the 
++   process' real user ID is superuser. In particular, they always return
++   zero when testing execute permissions without regard to whether the 
++   file is executable.
++
++   While this behaviour conforms to POSIX.1-2008, it is explicitely 
++   discouraged. This wrapper implements the recommended behaviour.
++ */
++
 +int
 +faccessat (fd, file, mode, flag)
 +     int fd;
@@ -8955,7 +8965,24 @@
 +	__have_atfcts = -1;
 +      else
 +# endif
++      {
++        if ((result == 0) && (mode & X_OK))
++        {
++          uid_t uid = (flag & AT_EACCESS) ? __geteuid () : __getuid ();
++          if (uid == 0)
++          {
++            struct stat64 stats;
++            if (fstatat64 (fd, file, &stats, flag & AT_SYMLINK_NOFOLLOW))
++              return -1;
++            if ((stats.st_mode & (S_IXUSR | S_IXGRP | S_IXOTH)) == 0)
++            {
++              __set_errno (EACCES);
++              return -1;
++	    }
++          }
++	}
 +	return result;
++      }	
 +    }
 +
 +#ifndef __ASSUME_ATFCTS
@@ -20315,7 +20342,7 @@
 +    case AF_IPX:
 +      return sizeof (struct sockaddr_ipx);
 +    case AF_LOCAL:
-+      return sizeof (struct sockaddr_un);
++      return sizeof (struct sockaddr_un) - 4;
 +    }
 +  return 0;
 +}
